# majong-rl

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
bindings/: mahjong_bindings.cpp
configs/: default_stage1.yaml  stage1_full_flat_mlp_imitation_then_ppo.yaml  stage1_full_flat_mlp_ppo.yaml  stage1_full_flat_mlp_ppo_eval_fast.yaml  stage1_full_flat_mlp_ppo_eval_strict.yaml  stage1_full_flat_mlp_ppo_rotation_eval.yaml
docs/: CHANGE_QUEUE.md  GAME_RULE.md  GAME_SPEC.md  RL_RULE.md  RL_SPEC.md  RULE.md  SPEC.md
examples/: main.cpp
experiments/: README.md
experiments/exp_001/: report.md  runbook.md
experiments/exp_002/: report.md  runbook.md
experiments/exp_003/: report.md  runbook.md
experiments/exp_004/: report.md  runbook.md
experiments/exp_005/: report.md  runbook.md
experiments/exp_006/: report.md  runbook.md
experiments/exp_007/: report.md  runbook.md
experiments/exp_008/: report.md  runbook.md
experiments/exp_009/: report.md  runbook.md
experiments/exp_010/: report.md  run_map.json  runbook.md
experiments/exp_011/: report.md  runbook.md
experiments/exp_012/: report.md  runbook.md
experiments/exp_013/: report.md  runbook.md
python/mahjong_rl/: __init__.py  action_selector.py  batch_report.py  cli.py  evaluator.py  experiment.py  learner.py  legal_mask.py  profiler.py  runner.py  selfplay_worker.py  shard.py
python/mahjong_rl/baseline/: __init__.py  rule_based.py  shanten.py
python/mahjong_rl/encoders/: __init__.py  base.py  channel_encoder.py  flat_encoder.py
python/mahjong_rl/env/: __init__.py  stage1_env.py
python/mahjong_rl/models/: __init__.py  base.py  mlp_model.py
src/core/: action.cpp  action.h  environment_state.cpp  environment_state.h  event.cpp  event.h  match_state.cpp  match_state.h  meld.cpp  meld.h  player_state.cpp  player_state.h  round_state.cpp  round_state.h  tile.cpp  tile.h  types.cpp  types.h
src/engine/: game_engine.cpp  game_engine.h  hand_utils.cpp  hand_utils.h  state_validator.cpp  state_validator.h
src/io/: display.cpp  display.h  game_record.cpp  game_record.h
src/rl/: observation.cpp  observation.h  reward_policy.cpp  reward_policy.h  search_utils.cpp  search_utils.h
src/rules/: agari.cpp  agari.h  fu_calculator.cpp  fu_calculator.h  score_calculator.cpp  score_calculator.h  yaku.cpp  yaku.h
tests/: test_helpers.h
tests/integration/: round_flow_test.cpp
tests/python/: conftest.py  test_action_selector.py  test_baseline.py  test_batch_report.py  test_binding.py  test_cli.py  test_encoders.py  test_evaluator.py  test_experiment.py  test_integration.py  test_learner.py  test_model.py  test_profiler.py  test_rl_integration.py  test_runner.py  test_selfplay.py  test_shard.py  test_stage1_env.py
tests/replay/: replay_test.cpp
tests/unit/: action_test.cpp  agari_test.cpp  chankan_test.cpp  debug_fast_test.cpp  environment_test.cpp  event_test.cpp  fu_calculator_test.cpp  furiten_naki_test.cpp  furiten_test.cpp  game_engine_test.cpp  game_record_test.cpp  hand_utils_test.cpp  illegal_action_test.cpp  ippatsu_test.cpp  meld_test.cpp  multi_ron_test.cpp  observation_test.cpp  oorasu_test.cpp  phase_test.cpp  reproducibility_test.cpp  reward_policy_test.cpp  round_reset_test.cpp  score_calculator_test.cpp  search_utils_test.cpp  settlement_test.cpp  state_test.cpp  state_validator_test.cpp  tile_test.cpp  types_test.cpp  yaku_test.cpp
tools/: mahjong_cli.cpp
