[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "mahjong-rl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "torch>=2.0", "pyarrow>=12.0", "pyyaml>=6.0"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/mahjong_rl"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
